# lab

./: .env.example  .env.test  .gitignore  ASSESSMENT_ARCHITECTURE_ANALYSIS.md  BACKEND_API_DOCUMENTATION.md  COMPREHENSIVE_ANALYSIS_REPORT.md  Dockerfile  README.md  alembic.ini  comprehensive_analysis_report_20250921_002402.json  comprehensive_analysis_report_20250921_002452.json  docker-compose.yml  healthcare_analysis_report_20250921_002859.json  healthcare_api_tester.py  implementation-plan.md  init.sql  manual_code_analyzer.py  package.json  pyproject.toml  requirements.txt  setup_admin.py  start-servers.bat  start.bat  tasks.md  temp_feature_desc.txt  temp_impl_details.txt  test_analysis_report.py  test_api_comprehensive.py  test_assessment_quick.py  test_env.py  test_integration.py  test_postgres.py  test_psycopg2.py  upgrade_env.py
.github/: copilot-instructions.md
.specify/: plan-execution-report.md
.specify/contracts/: auth-api.md  forms-api.md  patient-api.md  reports-api.md  visit-api.md
.specify/memory/: constitution.md
.specify/specs/: data-model.md  feature_spec.md  quickstart.md  research.md  tasks.md
.specify/templates/: plan-template.md
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_document.py
app/: database.py  main.py  models.py
app/api/: deps.py
app/api/routes/: auth.py  dashboard.py  forms.py  patients.py  reports.py  users.py  visits.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  assessments.py  auth.py  documents.py  patients.py  reports.py  visits.py
app/core/: config.py  logging_config.py  security.py  security_middleware.py
app/db/: init_db.py  mock.sql  schema.sql
app/models/: __init__.py  assessment.py  audit.py  document.py  form.py  patient.py  user.py  visit.py
app/schemas/: assessment.py  auth.py  document.py  form_schemas.py  patient.py  patient_schemas.py  report.py  report_schemas.py  user_schemas.py  visit.py  visit_schemas.py
app/services/: assessment_service.py  audit_service.py  auth_service.py  document_service.py  patient_service.py  report_service.py  visit_service.py
app/tests/: conftest.py  test_documents.py
app/tests/contract/: test_assessments.py  test_auth.py  test_documents.py  test_patients.py  test_reports.py  test_visits.py
app/utils/: file_handler.py
backend/: .env.example  Dockerfile  database-json.js  database-pg.js  database-simple.js  database-sqlite3.js  database.js  package.json  server.js  temp-package.json
backend/scripts/: migrate.js
database/: data.json  schema.sql  sqlite_schema.sql
db/: custom.db
docs/: DEPLOYMENT_CHECKLIST.md  PRODUCTION_READINESS_SUMMARY.md  check_eval.txt  ct.txt  database.sql  frontend_guide.md  general_sheet.txt  project_plan.md
frontend/: Dockerfile  package.json
frontend/docker/: nginx.conf
frontend/public/: forms-nursing.html  index.html  login.html  manifest.json  patients-new.html  patients.html  visits.html
frontend/public/styles/: main.css
frontend/src/: App.js  index.css
frontend/src/components/: GeneralForm.js  NursingForm.js  PETCTForm.js
frontend/src/js/: main.js
frontend/src/services/: api.js
nginx/: nginx.conf
nginx/ssl/: README.md
prisma/: schema.prisma
prisma/seed/: index.ts
scripts/: backup.sh  check_admin.py  create_admin.py  deploy.sh  monitor.sh  verify_admin.py
specs/: data-model.md  plan.md  tasks.md
specs/002-system-overview-healthcare/: quickstart.md  research.md  spec.md
specs/contracts/: openapi.yaml
src/app/: page.tsx
src/app/admin/: page.tsx
src/app/api/patients/: route.ts
src/app/api/reports/: route.ts
src/app/visits/: page.tsx
src/components/: NurseCurrentVisits.tsx
web/: .env  .eslintrc.js  README.md  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  server.js  tailwind.config.js
web/public/: dashboard.html  forms-nursing.html  forms-physician.html  index.html  login.html  patients-new.html  patients.html  visits.html
web/public/styles/: main.css
web/src/js/: main.js
web/src/styles/: main.css
web/tests/: frontend.test.js
(+14 files in other folders)
